--- a/.github/workflows/devto.yaml
+++ b/.github/workflows/devto.yaml
@@ -2,7 +2,7 @@ name: Latest blog post workflow
 on:
   schedule:
     # Runs every day
-    - cron: '30 5 * * *'
+    - cron: "30 5 * * *"
   workflow_dispatch:
 
 jobs:
@@ -14,5 +14,5 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: "https://dev.to/feed/sandeepk27"
-          commit_message: "Update dev.to blog posts"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
+          max_post_count: 5
