--- a/.github/workflows/devto.yaml
+++ b/.github/workflows/devto.yaml
@@ -14,5 +14,6 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: "https://dev.to/feed/sandeepk27"
+          commit_message: "Update dev.to blog posts"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
           max_post_count: 5
